assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Special+Elite&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
}

body {
    font-weight: 300;
    color: #3a3a3a;
    font-size: 18px;
    background: url("../images/background.jpg") no-repeat center center;
    background-size: cover;

}

body,
button {
    font-family: 'Special Elite', cursive;

}

#content-wrap {
    padding-bottom: 460px;
}

/* CLASS FOR ALL BUTONS */
.btn {
    width: fit-content;
    font-weight: bold;
    padding: 10px 40px;
    font-size: 17px;
    border: 1px solid #3a3a3acf;
    border-radius: 5px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}

#page-container {
    position: relative;
    min-height: 100vh;
    z-index: 1;
}

h1 {
    font-family: 'Bangers', cursive;
}

/* HEADER */
header {
    height: 170px;
    padding: 30px 0px;
    text-align: center;
    background-image: linear-gradient(#fff 33%, #3395dc00);
    font-weight: bold;
}

header a {
    text-decoration: none;
    color: #3a3a3a;
}

header h1 {
    margin-bottom: 3px;
}

header h2 {
    font-size: 21px;
    margin-bottom: 10px;

}

/* HEADER SOUND ICON CONTAINER */
#sound-control {
    left: 50%;
    transform: translateX(-50%);
    padding: 15px;
    position: absolute;
    top: 105px;
}

#sound-control i {
    font-size: 30px;
}

.icon-inactive {
    display: none;
}

/* CONTAINER FOR GAME CONTENT */
#game-section {
    position: relative;
    width: 100%;
    display: flex;
    justify-content: center;
}

/* GAME CONTAINER DISPLAYED AFTER PLAY BUTTON CLICKED */
#game-elements {
    display: none;
    position: absolute;
    top: 0%;
    z-index: -5;
}

/* GAME INITIAL MENU */
#game-prefferences {
    width: 90%;
    height: 300px;
    background-color: #ffffffa3;
    margin: 0 auto;
    border-radius: 25px;
    padding: 30px;
    text-align: center;
    font-weight: bold;
    position: relative;
}

#game-prefferences li {
    list-style-type: none;
    width: 78%;
    padding: 5px;
    color: white;
    font-weight: bold;
    letter-spacing: 2px;
    border-radius: 20px;
    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
    text-transform: uppercase;
    transition: 0.1s ease-out;

}

#game-prefferences li:not(:last-child) {
    margin: 20px auto;

}

#game-prefferences li:last-child {
    margin: 20px auto 10px;

}


.level-inactive {
    background-color: #22b3e5ed;
    border: 1px solid dodgerblue;
}

.level-active {
    background-color: #77469b;
    border: 1px solid #522f6c;
}

#game-prefferences div {
    height: 25px;
}

/* WARNING DISPLAYED WHEN LEVEL IS NOT SELECTED */
#level-warning {
    font-size: 15px;
    color: #d30707;
    font-weight: bold;
    margin-bottom: 10px;
    display: none;
}

/* PLAY BUTTON */
#game-prefferences button {
    color: #3a3a3a;
    background-color: #fff;
    position: relative;
    z-index: 1;
}



#game-prefferences img {
    height: 200px;
    float: right;
    position: absolute;
    right: -4%;
    top: 72%;
}


#game-rules {
    width: 80%;
    margin: 0 auto;
    position: absolute;
    top: 150%;
    left: 50%;
    transform: translateX(-50%);
    color: #42526e;
}

/* FOOTER */
footer {
    width: 100%;
    height: 65px;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;

    position: absolute;
    bottom: 0%;
    z-index: -1;
}

footer ul {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    list-style-type: none;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

footer li {
    border: 2px solid #fff0;
    border-radius: 50px;
    height: 40px;
    width: 40px;
    text-align: center;
    transition: border 0.1s ease-in;

}



footer a {
    color: #0761a3;
    transition: 0.2s ease-out;
    font-size: 25px;
    position: relative;
    top: 15%;
}

/* CONTAINER FOR GAME ELEMENTS */
#game-area {
    width: 90%;

    display: flex;
    flex-direction: column;

    padding: 15px;
    background-color: #ffffff91;
    border-radius: 25px;

    position: relative;
    left: 50%;
    transform: translateX(-50%);

    z-index: 1;
    margin-bottom: 10px;

}

/* CONTAINER FOR UPPER ELEMENTS */
#upper-section {
    width: 100%;
    border: 2px solid #ecf7fd;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
    background-color: #ffffffbd;

    position: relative;
    z-index: -2;

    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 5px;
}

/* CONTAINER FOR IMAGES */
.cartoon-container {
    width: 300px;
    height: 205px;

    overflow: hidden;

    position: relative;

    margin: 0 auto;

}

.cartoon-container p {
    position: absolute;
    top: 2%;
    right: 24%;
    font-size: 16px;
    font-weight: bold;
}

.cartoon-container>img {
    height: 145px;
    position: absolute;
    left: 0;

    transform: rotateZ(10deg);
    animation: sun 0.5s infinite;
    animation-direction: alternate;
}

/* ANIMATION TO INFINITE ROTATE THE SUN BY 10 DEG */
@keyframes sun {
    0% {
        transform: rotateZ(0);
    }

    100% {
        transform: rotateZ(10deg);
    }
}

/* CONTAINER FOR SNOWMAN PARTS POSITIONED TO MAKE A COMPLETE SNOWMAN */
.melting-snowman-container {
    width: 235px;
    height: 220px;
    position: relative;
    display: flex;
    justify-content: center;
    overflow: hidden;
    top: 18%;
    right: -24%;

}

.sun {
    top: -8%;
    left: 0%;
}

.melting-snowman-container img {
    height: 145px;
    position: absolute;
}

.body {
    bottom: 15%;
    right: 15%;
}

#melted1 {
    display: none;
}

#melted2 {
    display: none;
}

#melted3 {
    display: none;
}

#hat {
    top: -9%;
    right: 10%;
    z-index: -1;
}

#nose {
    top: -1%;
    right: 16%;
}

#left-hand {
    top: 6%;
    right: -4%;
}

#right-hand {
    top: 4%;
    right: 24%;
}
/* ... */

